2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Internationalisation/Filesystems): Add precisions
	mentioning possible problems with non-ASCII (non-compliant) ISOs.
	MEntion case-insensitive AFFS, SFS and JFS.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_mtime): Add missing grub_dl_ref.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/fs.c (grub_fs_probe): Handle GRUB_ERR_OUT_OF_RANGE as
	a bad FS.

2012-05-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Mark plain
	ISO9660 names as case-insensitive, lowercase it and remove trailing dot.

2012-05-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_data): New field caseins.
	(grub_jfs_mount): Fill caseins.
	(grub_jfs_find_file): Respect caseins.

2012-05-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Don't strrchr
	through UTF-16.

2012-05-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_find_dir): Fix error message.
	New argument origpath. All users updated.

2012-05-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (read_data): Prevent overflow.
	(read_attr): Ensure that we read start of possibly compressed block.

2012-05-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/ntfs.h (grub_ntfs_comp_table_element): New struct.
	(grub_ntfs_comp): Use grub_ntfs_comp_table_element for comp_table.
	All users updated.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (starfield_DATA): Replace dejavu.pf2 with dejavu_10.pf2,
	dejavu_12.pf2, dejavu_14.pf2 and dejavu_16.pf2.
	(dejavu.pf2): Replace with ...
	(dejavu_10.pf2), (dejavu_12.pf2), (dejavu_14.pf2), (dejavu_16.pf2):
	this.

2012-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Add missing line.
